internal/gatewayapi/testdata/httproute-with-non-existent-authenfilter-ref.out.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: Gateway
  metadata:
    namespace: envoy-gateway
    name: gateway-1
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.envoyproxy.io"
      allowedRoutes:
        namespaces:
          from: All
  status:
    listeners:
    - name: http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
      attachedRoutes: 0 
      conditions:
      - type: Programmed
        status: "True"
        reason: Programmed
        message: Sending translated listener configuration to the data plane
      - type: Accepted
        status: "True"
        reason: Accepted
        message: Listener has been successfully translated
httpRoutes:
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: HTTPRoute
  metadata:
    namespace: default
    name: httproute-1
  spec:
    hostnames:
    - gateway.envoyproxy.io
    parentRefs:
    - namespace: envoy-gateway
      name: gateway-1
      sectionName: http
    rules:
    - matches:
      - path:
          value: "/"
      backendRefs:
      - name: service-1
        port: 8080
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.envoyproxy.io
          kind: AuthenticationFilter
          name: non-exist 
  status:
    parents:
    - parentRef:
        namespace: envoy-gateway
        name: gateway-1
        sectionName: http
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      conditions:
      - type: Accepted
        status: "False"
        reason: UnsupportedValue
        message: "Reference default/non-exist not found for filter type: AuthenticationFilter"
      - type: ResolvedRefs
        status: "False"
        reason: BackendNotFound
        message: "Reference default/non-exist not found for filter type: AuthenticationFilter"
xdsIR:
  envoy-gateway-gateway-1:
    http:
    - name: envoy-gateway-gateway-1-http
      address: 0.0.0.0
      port: 10080
      hostnames:
      - "*.envoyproxy.io"
infraIR:
  envoy-gateway-gateway-1:
    proxy:
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
          gateway.envoyproxy.io/owning-gateway-name: gateway-1
      name: envoy-gateway-gateway-1
      image: envoyproxy/envoy:translator-tests
      listeners:
      - address: ""
        ports:
        - name: http
          protocol: "HTTP"
          containerPort: 10080
          servicePort: 80
